Exc5/admin-back-end-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-back-end-api-service
spec:
  type: NodePort
  selector:
    role: admin-back-end-api
  ports:
    - protocol: TCP
      port: 80
