Exc5/admin-front-end-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-front-end-service
spec:
  type: NodePort
  selector:
    role: admin-front-end
  ports:
    - protocol: TCP
      port: 80
