Exc5/back-end-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-end-api-service
spec:
  type: NodePort
  selector:
    role: back-end-api
  ports:
    - protocol: TCP
      port: 80
