Exc5/front-end-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-end-service
spec:
  type: NodePort
  selector:
    role: front-end
  ports:
    - protocol: TCP
      port: 80
